chore: 사소한 부분 제거